--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
       display: none;
       margin-top: -0.5rem;
     }
+
+    footer {
+      margin: 2rem auto;
+      max-width: 600px;
+      font-size: 0.875rem;
+      color: #bbb;
+      text-align: center;
+      padding: 0 1rem;
+    }
   </style>
 </head>
 <body>
@@ -108,6 +117,10 @@
 
     <div id="output"></div>
   </main>
+
+  <footer>
+    <p><strong>Disclaimer:</strong> IBMsum is an independent, fan-made tool and is not affiliated with, endorsed by, or associated with IBM. The generated content is inspired by publicly available IBM marketing language and terminology, used for educational and parody purposes only.</p>
+  </footer>
 
   <script>
     const ibmWords = [
